remove label dictionaries
Now relying on the default labels from emcommon

--- a/viz_scripts/generic_timeseries.ipynb
+++ b/viz_scripts/generic_timeseries.ipynb
@@ -48,6 +48,8 @@
     "from plots import *\n",
     "import scaffolding\n",
     "\n",
+    "import emcommon.util as emcu\n",
+    "\n",
     "sns.set_style(\"whitegrid\")\n",
     "sns.set()\n",
     "%matplotlib inline"
@@ -59,15 +61,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Loading mapping dictionaries from mapping_dictionaries notebook\n",
-    "%store -r df_ei\n",
-    "%store -r dic_re\n",
-    "%store -r dic_fuel\n",
-    "\n",
-    "# convert a dictionary to a defaultdict\n",
-    "dic_re = defaultdict(lambda: 'Other',dic_re)\n",
-    "dic_fuel = defaultdict(lambda: 'Other',dic_fuel)\n",
-    "\n",
     "# get metric vs imperial vars\n",
     "label_units, dist_unit, label_units_lower, distance_col, weight_unit = scaffolding.get_units(use_imperial)"
    ]
@@ -151,12 +144,14 @@
     "    expanded_ct_sensed.user_id = pd.Categorical(expanded_ct_sensed.user_id)\n",
     "    expanded_ct_sensed.date_time = pd.Categorical(expanded_ct_sensed.date_time)\n",
     "\n",
+    "if len(dynamic_labels) > 0:\n",
+    "    labels=dynamic_labels\n",
+    "else:\n",
+    "    labels = await emcu.read_json_resource(\"label-options.default.json\")\n",
+    "dic_mode_mapping = scaffolding.mapping_labels(labels, \"MODE\")\n",
+    "\n",
     "if \"Mode_confirm\" in expanded_ct.columns:\n",
-    "    if (len(dynamic_labels) > 0):\n",
-    "        dic_mode_mapping = scaffolding.mapping_labels(dynamic_labels, \"MODE\")\n",
-    "        data.Mode_confirm = pd.Categorical(data.Mode_confirm, ordered=True, categories=np.unique(list(dic_mode_mapping.values())))\n",
-    "    else:\n",
-    "        data.Mode_confirm = pd.Categorical(data.Mode_confirm, ordered=True, categories=np.unique(list(dic_re.values())))"
+    "    data.Mode_confirm = pd.Categorical(data.Mode_confirm, ordered=True, categories=np.unique(list(dic_mode_mapping.values())))"
    ]
   },
   {
@@ -379,11 +374,8 @@
     "    # Re-establish categorical variable to not include Other and Non-trips\n",
     "    plot_data = plot_data[~plot_data['Mode_confirm'].isin(['Not a Trip','Other'])]\n",
     "\n",
-    "    if (len(dynamic_labels) > 0):\n",
-    "            dic_mode_mapping = scaffolding.mapping_labels(dynamic_labels, label_type = \"MODE\")\n",
-    "            plot_data.Mode_confirm = pd.Categorical(plot_data.Mode_confirm, ordered=True, categories=np.unique(list(dic_mode_mapping.values())))    \n",
-    "    else:\n",
-    "        plot_data.Mode_confirm = pd.Categorical(plot_data.Mode_confirm, ordered=True, categories=np.unique(list(dic_re.values())))\n",
+    "    plot_data.Mode_confirm = pd.Categorical(plot_data.Mode_confirm, ordered=True, categories=np.unique(list(dic_mode_mapping.values())))    \n",
+    "\n",
     "    plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
     "    ylab = 'Proportion of All Trips'\n",
     "    legend_title = 'Confirmed Mode'\n",
