--- a/viz_scripts/mode_specific_timeseries.ipynb
+++ b/viz_scripts/mode_specific_timeseries.ipynb
@@ -47,6 +47,8 @@
     "from plots import *\n",
     "import scaffolding\n",
     "\n",
+    "import emcommon.util as emcu\n",
+    "\n",
     "sns.set_style(\"whitegrid\")\n",
     "sns.set()\n",
     "%matplotlib inline"
@@ -71,14 +73,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Loading mapping dictionaries from mapping_dictionaries notebook\n",
-    "%store -r dic_re\n",
-    "%store -r dic_pur\n",
-    "\n",
-    "# convert a dictionary to a defaultdict\n",
-    "dic_re = defaultdict(lambda: 'Other',dic_re)\n",
-    "dic_pur = defaultdict(lambda: 'Other',dic_pur)\n",
-    "\n",
     "# get metric vs imperial vars\n",
     "label_units, short_label, label_units_lower, distance_col, weight_unit = scaffolding.get_units(use_imperial)"
    ]
@@ -101,8 +95,6 @@
     "                                                                            program,\n",
     "                                                                            study_type,\n",
     "                                                                            dynamic_labels,\n",
-    "                                                                            dic_re,\n",
-    "                                                                            dic_pur=dic_pur,\n",
     "                                                                            include_test_users=include_test_users)"
    ]
   },
@@ -185,9 +177,14 @@
     "        mode_distance_interest = mode_distance[mode_distance['mode_confirm']==mode_of_interest].copy()\n",
     "\n",
     "        # Mapping new mode labels with dictionaries\n",
-    "        mode_counts['Mode_confirm'] = mode_counts['mode_confirm'].map(dic_re)\n",
-    "        mode_counts_interest['Mode_confirm'] = mode_counts_interest['mode_confirm'].map(dic_re)\n",
-    "        mode_distance_interest['Mode_confirm'] = mode_distance_interest['mode_confirm'].map(dic_re)\n",
+    "        if len(dynamic_labels) > 0:\n",
+    "            labels=dynamic_labels\n",
+    "        else:\n",
+    "            labels = await emcu.read_json_resource(\"label-options.default.json\")\n",
+    "        dic_mode_mapping = scaffolding.mapping_labels(labels, \"MODE\")\n",
+    "        mode_counts['Mode_confirm'] = mode_counts['mode_confirm'].map(dic_mode_mapping)\n",
+    "        mode_counts_interest['Mode_confirm'] = mode_counts_interest['mode_confirm'].map(dic_mode_mapping)\n",
+    "        mode_distance_interest['Mode_confirm'] = mode_distance_interest['mode_confirm'].map(dic_mode_mapping)\n",
     "        quality_text = scaffolding.get_quality_text(expanded_ct, expanded_ct[expanded_ct['mode_confirm'] == mode_of_interest], mode_of_interest, include_test_users)"
    ]
   },
