--- a/viz_scripts/energy_calculations.ipynb
+++ b/viz_scripts/energy_calculations.ipynb
@@ -95,7 +95,7 @@
     "                                                                            include_test_users=include_test_users,\n",
     "                                                                            add_footprint=True)\n",
     "\n",
-    "expanded_ct = scaffolding.unpack_energy_emissions(expanded_ct)"
+    "expanded_ct = scaffolding.unpack_energy_emissions(expanded_ct) if \"mode_confirm_footprint\" in expanded_ct.columns else expanded_ct"
    ]
   },
   {
