--- a/viz_scripts/generic_timeseries.ipynb
+++ b/viz_scripts/generic_timeseries.ipynb
@@ -87,7 +87,7 @@
     "                                                                            dynamic_labels,\n",
     "                                                                            include_test_users=include_test_users,\n",
     "                                                                            add_footprint=True)\n",
-    "expanded_ct = scaffolding.unpack_energy_emissions(expanded_ct) if \"mode_confirm\" in expanded_ct.columns else expanded_ct\n",
+    "expanded_ct = scaffolding.unpack_energy_emissions(expanded_ct) if \"mode_confirm_footprint\" in expanded_ct.columns else expanded_ct\n",
     "\n",
     "expanded_ct_sensed, file_suffix_sensed, quality_text_sensed, debug_df_sensed = await scaffolding.load_viz_notebook_sensor_inference_data(year,\n",
     "                                                                            month,\n",
