Use internal label over Display label for trip_purpose_query.

--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -263,14 +263,7 @@
     "file_name = f\"ntrips_commute_mode_confirm{file_suffix}\"\n",
     "\n",
     "try:\n",
-    "    # Preprocess to find commute trips\n",
-    "    if (len(dynamic_labels)):\n",
-    "        purpose_map_label =  scaffolding.mapping_labels(dynamic_labels, \"PURPOSE\")\n",
-    "        translation_work = purpose_map_label['work']\n",
-    "        trip_purpose_query = f\"Trip_purpose == '{translation_work}'\"\n",
-    "    else:\n",
-    "        trip_purpose_query = \"Trip_purpose == 'Work'\"\n",
-    "\n",
+    "    trip_purpose_query = \"purpose_confirm == 'work'\"\n",
     "    expanded_ct_commute = expanded_ct.query(trip_purpose_query)\n",
     "    commute_quality_text = scaffolding.get_quality_text(expanded_ct, expanded_ct_commute, \"commute\", include_test_users) if not expanded_ct.empty else \"\"\n",
     "    expanded_ct_inferred_commute = expanded_ct_inferred.query(trip_purpose_query)\n",
