Add a check to not execute generic_metrics notebook for survey metrics data.

--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -32,7 +32,8 @@
     "include_test_users = False\n",
     "dynamic_labels = {}\n",
     "use_imperial = True\n",
-    "sensed_algo_prefix = \"cleaned\""
+    "sensed_algo_prefix = \"cleaned\"\n",
+    "survey_info = {}"
    ]
   },
   {
@@ -54,6 +55,20 @@
     "sns.set_style(\"whitegrid\")\n",
     "sns.set()\n",
     "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eaf90438",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Do not run this notebook if it has survey_info; nbclient will run up through this cell\n",
+    "if survey_info != {}:\n",
+    "    ipython = get_ipython()\n",
+    "    ipython._showtraceback = scaffolding.no_traceback_handler\n",
+    "    raise Exception(\"The plots in this notebook are relevant to survey metrics\")"
    ]
   },
   {
