Update the exception message in stopping execution of survey info related data for generic_metrics noteboook.

--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -68,7 +68,7 @@
     "if survey_info != {}:\n",
     "    ipython = get_ipython()\n",
     "    ipython._showtraceback = scaffolding.no_traceback_handler\n",
-    "    raise Exception(\"The plots in this notebook are relevant to survey metrics\")"
+    "    raise Exception(\"The plots in this notebook are irrelevant to survey info\")"
    ]
   },
   {
