Change the notebook execution check to look up for trip-labels as MULTILABEL for generic_metrics notebook

--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -64,11 +64,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Do not run this notebook if it has survey_info; nbclient will run up through this cell\n",
-    "if survey_info != {}:\n",
+    "# Do not run this notebook if it does not have trip-labels as MULTILABEL; nbclient will run up through this cell\n",
+    "if not survey_info.get('trip-labels', None) == 'MULTILABEL':\n",
     "    ipython = get_ipython()\n",
     "    ipython._showtraceback = scaffolding.no_traceback_handler\n",
-    "    raise Exception(\"The plots in this notebook are irrelevant to survey info\")"
+    "    raise Exception(\"The plots in this notebook are only relevant for MULTILABEL trip-labels\")"
    ]
   },
   {
