update condition for generic metrics
rather than halt on survey info that does not have multilabel

halt on survey info that does have enketo

blank survey info means default, which means multilabel, and we should still proceed

--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -64,11 +64,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Do not run this notebook if it does not have trip-labels as MULTILABEL; nbclient will run up through this cell\n",
-    "if not survey_info.get('trip-labels', None) == 'MULTILABEL':\n",
+    "# Do not run this notebook if it has trip-labels as ENKETO nbclient will run up through this cell\n",
+    "if survey_info.get('trip-labels', None) == 'ENKETO':\n",
     "    ipython = get_ipython()\n",
     "    ipython._showtraceback = scaffolding.no_traceback_handler\n",
-    "    raise Exception(\"The plots in this notebook are only relevant for MULTILABEL trip-labels\")"
+    "    raise Exception(\"The plots in this notebook are not relecant for ENKETO trip-labels\")"
    ]
   },
   {
