--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -30,7 +30,7 @@
     "program = \"default\"\n",
     "study_type = \"study\"\n",
     "include_test_users = False\n",
-    "dynamic_labels = {}\n",
+    "labels = {}\n",
     "use_imperial = True\n",
     "sensed_algo_prefix = \"cleaned\"\n",
     "survey_info = {}"
@@ -97,8 +97,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "colors_mode, colors_replaced, colors_purpose, colors_sensed, colors_ble = await scaffolding.mapping_color_labels(dynamic_labels)\n",
-    "values_to_translations, value_to_translations_purpose, values_to_translations_replaced = await scaffolding.translate_values_to_labels(dynamic_labels)"
+    "colors_mode, colors_replaced, colors_purpose, colors_sensed, colors_ble = scaffolding.mapping_color_labels(labels)\n",
+    "values_to_translations, value_to_translations_purpose, values_to_translations_replaced = scaffolding.translate_values_to_labels(labels)"
    ]
   },
   {
@@ -120,7 +120,7 @@
     "                                                                            month,\n",
     "                                                                            program,\n",
     "                                                                            study_type,\n",
-    "                                                                            dynamic_labels,\n",
+    "                                                                            labels,\n",
     "                                                                            include_test_users=include_test_users)"
    ]
   },
@@ -165,7 +165,7 @@
     "                                                                            month,\n",
     "                                                                            program,\n",
     "                                                                            study_type,\n",
-    "                                                                            dynamic_labels,\n",
+    "                                                                            labels,\n",
     "                                                                            include_test_users=include_test_users)"
    ]
   },
