--- a/viz_scripts/mode_specific_metrics.ipynb
+++ b/viz_scripts/mode_specific_metrics.ipynb
@@ -31,7 +31,7 @@
     "study_type = \"program\"\n",
     "mode_of_interest = \"e-bike\"\n",
     "include_test_users = False\n",
-    "dynamic_labels = { }\n",
+    "labels = { }\n",
     "use_imperial = True"
    ]
   },
@@ -95,8 +95,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "colors_mode, colors_replaced, colors_purpose, colors_sensed, colors_ble  = await scaffolding.mapping_color_labels(dynamic_labels)\n",
-    "values_to_translations, value_to_translations_purpose, value_to_translations_replaced = await scaffolding.translate_values_to_labels(dynamic_labels)"
+    "colors_mode, colors_replaced, colors_purpose, colors_sensed, colors_ble  = scaffolding.mapping_color_labels(labels)\n",
+    "values_to_translations, value_to_translations_purpose, value_to_translations_replaced = scaffolding.translate_values_to_labels(labels)"
    ]
   },
   {
@@ -118,7 +118,7 @@
     "                                                                            month,\n",
     "                                                                            program,\n",
     "                                                                            study_type,\n",
-    "                                                                            dynamic_labels,\n",
+    "                                                                            labels,\n",
     "                                                                            include_test_users=include_test_users)"
    ]
   },
@@ -141,7 +141,7 @@
     "                                                                            month,\n",
     "                                                                            program,\n",
     "                                                                            study_type,\n",
-    "                                                                            dynamic_labels,\n",
+    "                                                                            labels,\n",
     "                                                                            include_test_users=include_test_users)"
    ]
   },
