Replace dynamic_labels with labels. Remove check for dynamic_labels since we pass dynamic labels or labels based on the availabilty in study/program's config file.

--- a/viz_scripts/mode_specific_timeseries.ipynb
+++ b/viz_scripts/mode_specific_timeseries.ipynb
@@ -28,7 +28,7 @@
     "study_type = \"program\"\n",
     "mode_of_interest = \"e-bike\"\n",
     "include_test_users = False\n",
-    "dynamic_labels = { }\n",
+    "labels = { }\n",
     "use_imperial = False"
    ]
   },
@@ -94,7 +94,7 @@
     "                                                                            month,\n",
     "                                                                            program,\n",
     "                                                                            study_type,\n",
-    "                                                                            dynamic_labels,\n",
+    "                                                                            labels,\n",
     "                                                                            include_test_users=include_test_users)"
    ]
   },
@@ -177,10 +177,6 @@
     "        mode_distance_interest = mode_distance[mode_distance['mode_confirm']==mode_of_interest].copy()\n",
     "\n",
     "        # Mapping new mode labels with dictionaries\n",
-    "        if len(dynamic_labels) > 0:\n",
-    "            labels=dynamic_labels\n",
-    "        else:\n",
-    "            labels = await emcu.read_json_resource(\"label-options.default.json\")\n",
     "        dic_mode_mapping = scaffolding.mapping_labels(labels, \"MODE\")\n",
     "        mode_counts['Mode_confirm'] = mode_counts['mode_confirm'].map(dic_mode_mapping)\n",
     "        mode_counts_interest['Mode_confirm'] = mode_counts_interest['mode_confirm'].map(dic_mode_mapping)\n",
