Replace dynamic_labels with labels.

--- a/viz_scripts/survey_responses.ipynb
+++ b/viz_scripts/survey_responses.ipynb
@@ -13,7 +13,7 @@
     "study_type = \"study\"\n",
     "mode_of_interest = None\n",
     "include_test_users = True\n",
-    "dynamic_labels = {}\n",
+    "labels = {}\n",
     "use_imperial = True\n",
     "survey_info = {}"
    ]
