Add labels as the parameter for load_viz_notebook_sensor_inference_data()

--- a/viz_scripts/generic_metrics_sensed.ipynb
+++ b/viz_scripts/generic_metrics_sensed.ipynb
@@ -30,6 +30,7 @@
     "program = \"default\"\n",
     "study_type = \"study\"\n",
     "mode_of_interest = None\n",
+    "labels = {}\n",
     "include_test_users = False\n",
     "use_imperial = False\n",
     "sensed_algo_prefix = \"cleaned\"\n",
@@ -77,6 +78,7 @@
     "expanded_ct, file_suffix, quality_text, debug_df = await scaffolding.load_viz_notebook_sensor_inference_data(year,\n",
     "                                                                            month,\n",
     "                                                                            program,\n",
+    "                                                                            labels,\n",
     "                                                                            include_test_users,\n",
     "                                                                            sensed_algo_prefix)"
    ]
