--- a/viz_scripts/survey_metrics.ipynb
+++ b/viz_scripts/survey_metrics.ipynb
@@ -96,6 +96,7 @@
     "expanded_ct_sensed, file_suffix_sensed, quality_text_sensed, debug_df_sensed = await scaffolding.load_viz_notebook_sensor_inference_data(year,\n",
     "                                                                            month,\n",
     "                                                                            program,\n",
+    "                                                                            labels,\n",
     "                                                                            include_test_users,\n",
     "                                                                            sensed_algo_prefix)"
    ]
